--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,9 @@
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": {}
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "comma-dangle": ["error", "never"],
+    "object-curly-newline": "off"
+  }
 }
